[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
graffitech_lib = { path = "../lib" }
js-sys = "0.3.69"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'BinaryType',
  'Blob',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'ErrorEvent',
  'EventTarget',
  'FileReader',
  'Headers',
  'HtmlCanvasElement',
  'HtmlElement',
  'Location',
  'MessageEvent',
  'MouseEvent',
  'Node',
  'ProgressEvent',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebSocket',
  'Window',
]